# PackageManager

./: README.md
Linux/: CMakeLists.txt  Database.hpp  PackageManager.cpp  PackageManager.hpp  pkg
Windows/pkg/: Database.hpp  PackageManager.hpp  pkg.cpp  pkg.sln  pkg.vcxproj  pkg.vcxproj.filters
Windows/pkg/x64/Debug/: main.js.XXXXXX  pkg.exe.recipe  pkg.ilk  pkg.vcxproj.FileListAbsolute.txt  vc143.idb
Windows/pkg/x64/Debug/pkg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pkg.lastbuildstate  pkg.write.1u.tlog
